# otirrota

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
src/: db.py  main.py  settings.py
src/client/: google_maps.py
src/common/: enum.py
src/common/controller/: base_add_controller.py  base_change_controller.py  base_controller.py  base_crud_controller.py  base_entity_controller.py  base_list_controller.py  base_remove_controller.py  base_view_controller.py
src/common/model/: base_model.py
src/common/utils/: currency.py  md5.py  number_utils.py  pdf_report.py  string.py
src/domain/: __init__.py
src/domain/companion/: model.py
src/domain/config/: model.py
src/domain/driver/: model.py
src/domain/location/: model.py
src/domain/menu/: controller.py  widget.py
src/domain/patient/: model.py
src/domain/purpose/: model.py
src/domain/roadmap/: model.py
src/domain/scheduling/: model.py
src/domain/user/: model.py
src/domain/vehicle/: model.py
src/factory/client/: google_maps.py
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 07586b6a02e2_scheduling_optional_patient.py  2616e3bb9b4f_create_config.py  28d47d520121_create_vehicle.py  916735e0356e_create_scheduling.py  971fe0d9faa2_create_user.py  a760bceaff05_create_roadmap.py  d63e2ebc40fc_create_purpose.py  dc9eb7169665_create_patient.py  dc9eb7169665_create_vehicle.py  e9b2f7128fd4_create_driver.py  fb0dc839e85c_create_location.py
src/routines/driver/: model.py
src/routines/menu/: controller.py  widget.py
src/routines/user/: model.py
(+127 files in other folders)
