[tool.poetry]
name = "otirrota"
version = "0.1.0"
description = "Um otimizador de rotas/roteiros para a área da saúde"
authors = ["Ruan Gustavo Moretti <ruan.gustavo.moretti10@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
psycopg2-binary = "^2.9.10"
pyside6 = "^6.9.0"
dotenv = "^0.9.9"
python-dateutil = "^2.9.0.post0"
googlemaps = "^4.10.0"
numpy = "^2.2.6"
scikit-learn = "^1.6.1"
ortools = "9.8.3296"
jinja2 = "^3.1.6"
xhtml2pdf = "^0.2.17"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
